--- a/.github/workflows/cookie-check-and-upload.yml
+++ b/.github/workflows/cookie-check-and-upload.yml
@@ -1,9 +1,9 @@
 name: Cookie Check and Avatar Upload
 
 on:
-  schedule:
+#  schedule:
     # 每5分钟运行一次 (UTC 时间)
-    - cron: '*/20 * * * *'
+ #   - cron: '*/20 * * * *'
   workflow_dispatch:  # 允许手动触发
   push:              # 添加push触发器，方便测试
 
